--- a/style_4.css
+++ b/style_4.css
@@ -1,6 +1,6 @@
 body
 {
-    background-image: url(./images/Background.jpeg);
+    background-image: url(Background.jpeg);
     background-repeat: no-repeat;
     background-size:cover ;
     text-align: center;
